# focusd

./: .gitignore  CLAUDE.md  README.md  go.work  requirements.txt  requirements_dev.txt
.claude/agents/: focusd-redteam.md
.github/workflows/: app_mon.yml  daemon-release.yml  daemon.yml  github-actions.yaml  platform.yml  release.yml
app_mon/: .golangci.yml  .goreleaser.yaml  CHANGELOG.md  Makefile  README.md  go.mod  go.sum
app_mon/browser_guard/: README.md  browser_guard.sh  list_open_tabs.sh
archive/chrome/: daemon.py  install.sh  plugins.yml  pyproject.toml
artifacts/: E2E_TEST_PLAN.md  post_local_MVP_proposal.md
artifacts/4_encrypted_registry/: implementation_plan.md  solution.md  test_plan.md
artifacts/managed_dns/: HLD_app_mon.md  next_dns.md
chrome/: CHANGELOG.md  DESIGN.md  README.md  cf  chrome_focus.py  version.yml
daemon/: go.mod
daemon/scripts/: e2e_selfheal.sh
data/: black.csv  fake_systemd_names.csv  white.csv
docs/: roadmap.md
docs/archived/: chrome.md  dansgurdian.md  focusd.md  opendns.md
docs/design/: main_idea.md
focusd/: __init__.py  __main__.py  main.py  publish.py  resolv.conf  run.py  sync_file.py  templates.py
platform/: README.md  go.mod  go.sum
plugins/browser-monitor/: Makefile  go.mod  plugin.json
publish/: __main__.py
random_thoughts/: thoughts.md
requirements/: LESSONS.md  REQUIREMENTS_REGISTER.md  deploy-recipe.md  e2e-test-history.md  e2e-verification.md  general_nonfunction.md  icebox.md  install.md
scripts/: ap.sh  build-companion.sh  build-platform.sh  build-plugins.sh  pyinstall.sh
(+432 files in other folders)
